Q&A レイアウト変更、内容変更

--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
@@ -48,9 +48,9 @@
         <ul class="question_list">
           <li class="question"><a href="#bono_language">どんな言語を使用したの？</a></li>
           <li class="question"><a href="#bono_period">制作期間はどれくらいかかったの？</a></li>
-          <li class="question"><a href="#bono_create">ホームページを作ることになった経緯</a></li>
           <li class="question"><a href="#bono_episode">作品について</a></li>
           <li class="question"><a href="#bono_technology">制作時のエピソード</a></li>
+          <li class="question"><a href="#bono_create">ホームページを作ることになった経緯</a></li>
         </ul>
       </section>
   
@@ -59,58 +59,49 @@
   
         <div class="q_and_a" id="bono_language">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>どんな言語を使用したの？</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>どんな言語を使用したの？</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScript(jQuery)を使って作成しました</p>
+            <p class="a_text"><span class="a_logo">A.</span>HTML , CSS ,JavaScript, jsライブラリのjQueryを使用し作成しました。</p>
           </div>
         </div>
   
         <div class="q_and_a" id="bono_period">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>制作期間はどれくらいかかったの？</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>制作期間はどれくらいかかったの？</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>6ヶ月</p>
+            <p class="a_text"><span class="a_logo">A.</span>6ヶ月ほどかかりました。</p>
           </div>
         </div>
 
-        <div class="q_and_a" id="bono_create">
-          <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>ホームページを作ることになった経緯</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
-          </div>
-          <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>転職を目指し何か作ろうと考えていました。そこで、実際にお客様から仕事をもらうことで個人での開発では得られないものがあるのではないか。また、自分のなかでプログラミングは趣味なのか本当に仕事にしたいことなのか自分自身の気持ちを確かめるきっかけを作るためでもありました。そうして地元のお店に電話をしたり直接話に行ってホームページを作らせてほしいとお願いに回りました。そこで、噂で私の話を聞いたBONO hairのオーナーが声をかけてくださり制作することになりました。</p>
-          </div>
-        </div>
-  
         <div class="q_and_a" id="bono_episode">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>作品について</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>作品について</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>デザイン、作成、管理すべて一人で行いました。デザインはなるべくお店の雰囲気似合うように、またターゲットにする客層をオーナーと相談しそこも意識しました。レスポンシブ対応もしておりケータイでの閲覧も可能に、サイト内の色、文字の内容などはお店のオーナーと相談したりしてお店のおしゃれな雰囲気を再現できたと思います。サイトが完成し公開して終わりではなく、オーナーと話合いどういったキーワードで検索順位上位を狙うかを決め、それを実現すべくSEOについても学習しました、Google search consoleやコードを見直したりこの開発を通してインプットだけでは知らなかった知識や、わからないことを調べる力がついたと思います。</p>
+            <p class="a_text"><span class="a_logo">A.</span>デザイン、作成、管理すべて一人で行いました。デザインはなるべくお店の雰囲気似合うように、またターゲットにする客層をオーナーと相談しそこも意識しました。レスポンシブ対応もしておりケータイでの閲覧も可能に、サイト内の色、文字の内容などはお店のオーナーと相談したりしてお店のおしゃれな雰囲気を再現できたと思います。サイトが完成し公開して終わりではなく、オーナーと話合いどういったキーワードで検索順位上位を狙うかを決め、それを実現すべくSEOについても学習しました、Google search consoleやコードを見直したりこの開発を通してインプットだけでは知らなかった知識や、わからないことを調べる力がついたと思います。</p>
           </div>
         </div>
   
         <div class="q_and_a" id="bono_technology">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>制作時のエピソード</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>制作時のエピソード</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>制作にあたり、お店のオーナーの方と沢山話し合いました。話し合える時間も限られていたため、仕事の終わりや土日の空き時間に足を運んだりしてとても大変でした。<br>そうしてサイトの構成が決まり、制作が始まりました！HTML,CSSで静的サイトまではスムーズにできたのですが、レスポンシブ対応や、jsで動きをつけたりは、js自体勉強を始めたばかりだったので調べて試してみてを繰り返して実装していきました。インプットでの知識をアウトプットすることでより理解が深まりました。完成したサイトをお店の人や実際に利用した人から話を聞く機会があり意見をいただいたり、評価してもらったりと制作のモチベーションにつながりました。<br>転職のために始めたことですがこの一連の制作を通して、純粋に何かを作ることの大変さ、それを実現する技術力、どんどん形になっていく楽しさはジャンルは違えど現在の職業とも重なるところが多く、さらにプログラミングが好きになりました。</p>
+            <p class="a_text"><span class="a_logo">A.</span>制作にあたり、お店のオーナーの方と沢山話し合いました。話し合える時間も限られていたため、仕事の終わりや土日の空き時間に足を運んだりしてとても大変でした。<br>そうしてサイトの構成が決まり、制作が始まりました！HTML,CSSで静的サイトまではスムーズにできたのですが、レスポンシブ対応や、jsで動きをつけたりは、js自体勉強を始めたばかりだったので調べて試してみてを繰り返して実装していきました。インプットでの知識をアウトプットすることでより理解が深まりました。完成したサイトをお店の人や実際に利用した人から話を聞く機会があり意見をいただいたり、評価してもらったりと制作のモチベーションにつながりました。<br>転職のために始めたことですがこの一連の制作を通して、純粋に何かを作ることの大変さ、それを実現する技術力、どんどん形になっていく楽しさはジャンルは違えど現在の職業とも重なるところが多く、さらにプログラミングが好きになりました。</p>
           </div>
         </div>
+
+        <div class="q_and_a" id="bono_create">
+          <div class="q_wrap">
+            <p class="q_text"><span class="q_logo">Q.</span>ホームページを作ることになった経緯</p>
+          </div>
+          <div class="a_wrap">
+            <p class="a_text"><span class="a_logo">A.</span>転職を目指し何か作ろうと考えていました。そこで、実際にお客様から仕事をもらうことで個人での開発では得られないものがあるのではないか。また、自分のなかでプログラミングは趣味なのか本当に仕事にしたいことなのか自分自身の気持ちを確かめるきっかけを作るためでもありました。そうして地元のお店に電話をしたり直接話に行ってホームページを作らせてほしいとお願いに回りました。そこで、噂で私の話を聞いたBONO hairのオーナーが声をかけてくださり制作することになりました。</p>
+          </div>
+        </div>
+
       </section>
     </div>
 
@@ -139,45 +130,37 @@
   
         <div class="q_and_a" id="todo_language">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>どんな言語を使用したの？</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>どんな言語を使用したの？</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>HTML , CSS ,JavaScriptを使って作成しました</p>
+            <p class="a_text"><span class="a_logo">A.</span>HTML , CSS ,JavaScriptを使って作成しました</p>
           </div>
         </div>
   
         <div class="q_and_a" id="todo_period">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>制作期間はどれくらいかかったの？</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>制作期間はどれくらいかかったの？</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>１ヶ月</p>
+            <p class="a_text"><span class="a_logo">A.</span>１ヶ月</p>
           </div>
         </div>
   
         <div class="q_and_a" id="todo_episode">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>制作について</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>制作について</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>他にJavaScriptでのアウトプットを何かできないかと思い、DOM操作を使ったtodoアプリを作成することにしました。</p>
+            <p class="a_text"><span class="a_logo">A.</span>他にJavaScriptでのアウトプットを何かできないかと思い、DOM操作を使ったtodoアプリを作成することにしました。</p>
           </div>
         </div>
   
         <div class="q_and_a" id="todo_technology">
           <div class="q_wrap">
-            <p class="q_text"><span class="q_logo">Q:</span>作品に使用した技術について</p>
-            <img src="img/user.png" class="user_img" alt="質問者">
+            <p class="q_text"><span class="q_logo">Q.</span>作品に使用した技術について</p>
           </div>
           <div class="a_wrap">
-            <img src="img/my_icon.webp" class="user_img" alt="質問者">
-            <p class="a_text"><span class="a_logo">A:</span>userが入力した文字を取得し、追加、完了、削除などDOM操作の基本を使っている単純なものなので、次は実用性のある物を作りたいです。</p>
+            <p class="a_text"><span class="a_logo">A.</span>userが入力した文字を取得し、追加、完了、削除などDOM操作の基本を使っている単純なものなので、次は実用性のある物を作りたいです。</p>
           </div>
         </div>
       </section>
