--- a/history/history.html
+++ b/history/history.html
@@ -17,8 +17,8 @@
         <li><a class="menu_item" href="../index.html#introduction">自己紹介</a></li>
         <li><a class="menu_item" href="../index.html#pg_myself">スキルセット</a></li>
         <li><a class="menu_item" href="../index.html#performance">作品紹介</a></li>
-        <li><a class="menu_item" href="#todo_introduction">今取り組んでいること</a></li>
-        <li><a class="menu_item" href="#bono_introduction">ざっくり学習の歴史</a></li>
+        <li><a class="menu_item" href="#effort">今取り組んでいること</a></li>
+        <li><a class="menu_item" href="#history">ざっくり学習の歴史</a></li>
       </ul>
 
       <i class="fas fa-bars" id="open_btn"></i>
@@ -26,61 +26,63 @@
         <li><a href="../index.html#introduction">自己紹介</a></li>
         <li><a href="../index.html#pg_myself">スキルセット</a></li>
         <li><a href="../index.html#performance">作品紹介</a></li>
-        <li><a href="#todo_introduction">今取り組んでいること</a></li>
-        <li><a href="#bono_introduction">ざっくり学習の歴史</a></li>
+        <li><a href="#effort">今取り組んでいること</a></li>
+        <li><a href="#history">ざっくり学習の歴史</a></li>
       </ul>
     </nav>
   </header>
 
-  <section class="effort">
+  <section class="effort" id="effort">
     <h1 class="main_title">今取り組んでいること</h1>
-
+    <div class="effort_item">
+      <h2 class="item_title">Webアプリケーション開発</h2>
+      <p class="item_text">SwiftとFierbaseを使用したスマホSNSアプリのWeb版の開発を目標としています。現在考えているのは,Vue.jsを使い作成したいと思っています。Vue.jsは初めて使用するので、現在基礎から学習を進めています。</p>
+    </div>
   </section>
 
-  <section class="history">
+  <section class="history" id="history">
     <h1 class="main_title">ざっくり学習の歴史紹介</h1>
     <div class="history_item_wrap">
 
       <div class="history_item">
-        <h2 class="h_title first">MacBookを購入する！(2018年11月)</h2>
-        <p class="h_text">ある日友人とカフェにて前々から興味があったプログラミングの話が...「プログラミングできたらなんかかっこいい！」「とにかくまずは挑戦しよう！」と思いその場でMacBookを購入！とても高かった・・・</p>
+        <h2 class="item_title first">MacBookを購入する！(2018年11月)</h2>
+        <p class="item_text">ある日友人とカフェにて前々から興味があったプログラミングの話が...「プログラミングできたらなんかかっこいい！」「とにかくまずは挑戦しよう！」と思いその場でMacBookを購入！とても高かった・・・</p>
       </div>
 
       <div class="history_item">
-        <h2 class="h_title">本を購入しRubyの勉強開始！</h2>
-        <p class="h_text">初心者向けの本を購入して基本構文を勉強しました。ある程度理解はできたけれど実際に何か作ったわけじゃないので、何に使用してRubyで何ができるのか理解できていませんでした。(なぜRubyを選んだのかは、友人のアドバイスと、開発者が日本人だったので日本人に分かりやすいのかもと思っていました。)</p>
+        <h2 class="item_title">本を購入しRubyの勉強開始！</h2>
+        <p class="item_text">初心者向けの本を購入して基本構文を勉強しました。ある程度理解はできたけれど実際に何か作ったわけじゃないので、何に使用してRubyで何ができるのか理解できていませんでした。(なぜRubyを選んだのかは、友人のアドバイスと、開発者が日本人だったので日本人に分かりやすいのかもと思っていました。)</p>
       </div>
 
       <div class="history_item">
-        <h2 class="h_title">Ruby on Railsとの出会い</h2>
-        <p class="h_text">ただ基礎構文を書いているだけで、何か他にできることはないのかなと思いRubyについて調べていると[Ruby on Rails]と出会う！Rubyのフレームワーク？とりあえずやってみよう！</p>
+        <h2 class="item_title">Ruby on Railsとの出会い</h2>
+        <p class="item_text">ただ基礎構文を書いているだけで、何か他にできることはないのかなと思いRubyについて調べていると[Ruby on Rails]と出会う！Rubyのフレームワーク？とりあえずやってみよう！</p>
       </div>
 
       <div class="history_item">
-        <h2 class="h_title">Ruby on Railsの学習、そして挫折</h2>
-        <p class="h_text">Railsのインストールで手順通りにやってみてもエラーの連続、なんとかインストールして学習開始！簡単なSNSを作れると知ったものの、難易度高すぎて速攻で息詰まる・・・ダメだ多分まだこれは自分には早い気がする(挫折しプログラミングほんとにできるのだろうか・・・)</p>
+        <h2 class="item_title">Ruby on Railsの学習、そして挫折</h2>
+        <p class="item_text">Railsのインストールで手順通りにやってみてもエラーの連続、なんとかインストールして学習開始！簡単なSNSを作れると知ったものの、難易度高すぎて速攻で息詰まる・・・ダメだ多分まだこれは自分には早い気がする(挫折しプログラミングほんとにできるのだろうか・・・)</p>
       </div>
 
       <div class="history_item">
-        <h2 class="h_title">HTML,CSSに出会う！</h2>
-        <p class="h_text">Rails挫折後、心機一転全く違う言語を勉強しよう！と思い初心者向け言語を探してHTML,CSSに出会う！実際に勉強を始めてみると、エディタをインストールしてコードを書きブラウザ上で自分の書いたコードが表現されて、視覚的にこう描けばこうなるということがわかり「これなら何か作れるかも！」と感じ漠然と最終的に何か作ってみたいなと考えていました。(この頃にやっとプログラミング自体について調べて、バックサイドとフロントサイドのという区分があることを知りました。)</p>
+        <h2 class="item_title">HTML,CSSに出会う！</h2>
+        <p class="item_text">Rails挫折後、心機一転全く違う言語を勉強しよう！と思い初心者向け言語を探してHTML,CSSに出会う！実際に勉強を始めてみると、エディタをインストールしてコードを書きブラウザ上で自分の書いたコードが表現されて、視覚的にこう描けばこうなるということがわかり「これなら何か作れるかも！」と感じ漠然と最終的に何か作ってみたいなと考えていました。(この頃にやっとプログラミング自体について調べて、バックサイドとフロントサイドのという区分があることを知りました。)</p>
       </div>
 
       <div class="history_item">
-        <h2 class="h_title">JavaScriptと出会う</h2>
-        <p class="h_text">HTML,CSSで作った静的サイトに動きをつけたりできる言語がある！ということを知り、これを学べば本格的に何か作れるかもと考えJavaScriptの勉強を始める。(急にめっちゃ難しい！)</p>
+        <h2 class="item_title">JavaScriptと出会う</h2>
+        <p class="item_text">HTML,CSSで作った静的サイトに動きをつけたりできる言語がある！ということを知り、これを学べば本格的に何か作れるかもと考えJavaScriptの勉強を始める。(急にめっちゃ難しい！)</p>
       </div>
 
       <p class="event_text">(2019年3月頃)今まで趣味の領域だったプログラミングを実際に自分の仕事にしたい！と思い転職に向けて何かを作成することを決意</p>
 
       <div class="history_item">
-        <h2 class="h_title">転職に向けての勉強を始める</h2>
-        <p class="h_text">転職するにあたって、「実戦で使用されるスキル」について調べたりして転職に向けて本格的に勉強を始めました。GIT,GitHubについて勉強し、実際の制作物をGitHubにあげていくようにしました。それに加え実際に作る制作物に必要な知識も勉強していき一気に勉強量が上がり形になっていくのが楽しく思えました。</p>
+        <h2 class="item_title">転職に向けての勉強を始める</h2>
+        <p class="item_text">転職するにあたって、「実戦で使用されるスキル」について調べたりして転職に向けて本格的に勉強を始めました。GIT,GitHubについて勉強し、実際の制作物をGitHubにあげていくようにしました。それに加え実際に作る制作物に必要な知識も勉強していき一気に勉強量が上がり大変な時もありましたが、徐々に形になっていくのが楽しく思えました。</p>
       </div>
 
     </div>
   </section>
-  <section class="effort"></section>
 <script src="../js/main.js"></script>
 </body>
 </html>
