headerのmenuの内容変更

--- a/history/history.html
+++ b/history/history.html
@@ -17,7 +17,7 @@
         <li><a class="menu_item" href="../index.html#introduction">自己紹介</a></li>
         <li><a class="menu_item" href="../index.html#pg_myself">スキルセット</a></li>
         <li><a class="menu_item" href="../index.html#performance">作品紹介</a></li>
-        <li><a class="menu_item" href="#effort">今取り組んでいること</a></li>
+        <li><a class="menu_item" href="../index.html#effort">現在取り組み</a></li>
         <li><a class="menu_item" href="#history">ざっくり学習の歴史</a></li>
       </ul>
 
@@ -26,20 +26,12 @@
         <li><a href="../index.html#introduction">自己紹介</a></li>
         <li><a href="../index.html#pg_myself">スキルセット</a></li>
         <li><a href="../index.html#performance">作品紹介</a></li>
-        <li><a href="#effort">今取り組んでいること</a></li>
+        <li><a href="../index.html#effort">現在取り組み</a></li>
         <li><a href="#history">ざっくり学習の歴史</a></li>
       </ul>
     </nav>
   </header>
-
-  <section class="effort" id="effort">
-    <h1 class="main_title">今取り組んでいること</h1>
-    <div class="effort_item">
-      <h2 class="item_title">Webアプリケーション開発</h2>
-      <p class="item_text">SwiftとFierbaseを使用したスマホSNSアプリのWeb版の開発を目標としています。現在考えているのは,Vue.jsを使い作成したいと思っています。Vue.jsは初めて使用するので、現在基礎から学習を進めています。</p>
-    </div>
-  </section>
-
+  
   <section class="history" id="history">
     <h1 class="main_title">ざっくり学習の歴史紹介</h1>
     <div class="history_item_wrap">
