--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/introduction.css">
   <link rel="stylesheet" href="css/i_media.css">
   <title>作品紹介(BONO hairホームページ)</title>
-</head>
+</head> 
 <body>
   <header>
     <nav>
@@ -17,6 +17,7 @@
         <li><a class="menu_item" href="../index.html#introduction">自己紹介</a></li>
         <li><a class="menu_item" href="../index.html#pg_myself">スキルセット</a></li>
         <li><a class="menu_item" href="../index.html#introduction">作品紹介</a></li>
+        <li><a class="menu_item" href="../index.html#effort">現在取り組み</a></li>
         <li><a class="menu_item" href="#bono_introduction">BONO hair</a></li>
         <li><a class="menu_item" href="#todo_introduction">todoリスト</a></li>
       </ul>
@@ -26,6 +27,7 @@
         <li><a href="../index.html#introduction">自己紹介</a></li>
         <li><a href="../index.html#pg_myself">スキルセット</a></li>
         <li><a href="../index.html#performance">作品紹介</a></li>
+        <li><a href="../index.html#effort">現在取り組み</a></li>
         <li><a href="#bono_introduction">BONO hair</a></li>
         <li><a href="#todo_introduction">todoリスト</a></li>
       </ul>
@@ -120,7 +122,7 @@
         <ul class="question_list">
           <li class="question"><a href="#todo_language">どんな言語を使用したの？</a></li>
           <li class="question"><a href="#todo_period">制作期間はどれくらいかかったの？</a></li>
-          <li class="question"><a href="#todo_episode">制作にあたって意識したこと(制作時のエピソードなど)</a></li>
+          <li class="question"><a href="#todo_episode">制作について</a></li>
           <li class="question"><a href="#todo_technology">作品に使用した技術について</a></li>
         </ul>
       </section>
