--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a class="menu_item" href="#introduction">自分紹介</a></li>
         <li><a class="menu_item" href="#pg_myself">スキルセット</a></li>
         <li><a class="menu_item" href="#performance">作品一覧</a></li>
+        <li><a class="menu_item" href="#effort">現在取り組み</a></li>
       </ul>
 
       <i class="fas fa-bars" id="open_btn"></i>
@@ -24,6 +25,7 @@
         <li><a href="#introduction">自分紹介</a></li>
         <li><a href="#pg_myself">スキルセット</a></li>
         <li><a href="#performance">作品一覧</a></li>
+        <li><a href="#effort">現在取り組み</a></li>
       </ul>
     </nav>
   </header>
@@ -36,9 +38,6 @@
     <section class="introduction" id="introduction">
       <h2 class="title_name">自己紹介</h2>
       <div class="id_content_wrap">
-        <div class="id_img">
-          <img src="img/scarlet-4728862_1280.jpg">
-        </div>
         <div class="id_text">
           <dl>
             <dt>名前</dt>
@@ -50,7 +49,13 @@
           </dl>
           <dl>
             <dt>趣味</dt>
-            <dd>ファッション , スポーツ(主にバスケットボール)</dd>
+            <dd>ファッション, ゲーム, 美容, スポーツ(主にバスケットボール)</dd>
+          </dl>
+        </div>
+        <div class="id_text">
+          <dl>
+            <dt>自己PR</dt>
+            <dd>これまで様々なことにチャレンジしてきました。成人式の実行委員、社内報の作成、職場改善の案など、そして、自ら行動して理容店のHP制作の仕事をもらい完成まで漕ぎつけました。これらの経験を経て挑戦することの大切さ楽しさを学び、現在進行形で勉強や趣味の領域まで、いろいろなことにチャレンジしています。この積極性と行動力を生かし現場の第一線で活躍できるエンジニアになりたいです。</dd>
           </dl>
         </div>
       </div>
@@ -67,11 +72,10 @@
             <dl>
               <dt>その他のツール</dt>
               <dd>・Git GitHub</dd>
-              <dd>・VScode</dd>
+              <dd>・Visual Studio Code</dd>
             </dl>
             <dl>
               <dt>おまけ</dt>
-              <dd><a a href="history/history.html">今取り組んでいること</a></dd>
               <dd><a href="history/history.html">プログラミング学習のざっくり歴史</a></dd>
             </dl>
           </div>
@@ -85,6 +89,7 @@
         <div class="pm_item">
           <div class="pm_item_title">BONO hairホームページ</div>
           <img class="pm_img" src="img/bono hair.png">
+          <p class="lang_text">使用言語: HTML / CSS / javascript / (jQuery)</p>
           <a class="pm_btn" href="introduction/introduction.html#bono_introduction">作品詳細</a>
           <a class="pm_btn" href="http://bonohair95.com">デモページ</a>
           <a class="pm_btn" href="https://github.com/taikitominari/bono-hair">Git Hub</a>
@@ -92,9 +97,21 @@
         <div class="pm_item">
           <div class="pm_item_title">todoリスト</div>
           <img class="pm_img" src="img/todoリスト.png">
+          <p class="lang_text">使用言語: HTML / CSS / javascript</p>
           <a class="pm_btn" href="introduction/introduction.html#todo_introduction">作品詳細</a>
           <a class="pm_btn" href="https:///taikitominari.github.io/todoapp">デモページ</a>
           <a class="pm_btn" href="https://github.com/taikitominari/todoapp">Git Hub</a>
+        </div>
+      </div>
+    </section>
+
+    <section class="effort" id="effort">
+      <div class="ef_content_wrap">
+        <h1 class="title_name">現在の取り組み</h1>
+        <div class="effort_item">
+          <h2 class="item_title">Webアプリケーション開発(Vue.jsの学習)</h2>
+          <p class="item_text">私の友人が開発したSwiftとFierbaseを使用したスマホSNSアプリのWeb版の開発を目標としています。現在漠然と考えているのは,Vue.jsを使い作成したいと思っています。そのため現在Vue.jsを主に動画教材でインプットして、それを少しアレンジしたり実際に自分で書くなどしてアウトプットしています。</p>
+          <a class="pm_btn" href="https://github.com/taikitominari/vue.js-study.git">Vue.jsアウトプット</a>
         </div>
       </div>
     </section>
