内容の変更

--- a/history/history.html
+++ b/history/history.html
@@ -66,7 +66,7 @@
         <p class="item_text">HTML,CSSで作った静的サイトに動きをつけたりできる言語がある！ということを知り、これを学べば本格的に何か作れるかもと考えJavaScriptの勉強を始める。(急にめっちゃ難しい！)</p>
       </div>
 
-      <p class="event_text">(2019年3月頃)今まで趣味の領域だったプログラミングを実際に自分の仕事にしたい！と思い転職に向けて何かを作成することを決意</p>
+      <p class="event_text">(2019年の終わり頃)今まで趣味の領域だったプログラミングを実際に自分の仕事にしたい！と思い転職に向けて何かを作成することを決意</p>
 
       <div class="history_item">
         <h2 class="item_title">転職に向けての勉強を始める</h2>
