--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
             <dl>
               <dt>その他のツール</dt>
               <dd>・Git GitHub</dd>
+              <dd><a class="pg_btn" href="https://github.com/taikitominari">githubアカウント</a></dd>
               <dd>・Visual Studio Code</dd>
             </dl>
             <dl>
@@ -96,7 +97,7 @@
         </div>
         <div class="pm_item">
           <div class="pm_item_title">todoリスト</div>
-          <img class="pm_img" src="img/todoリスト.png">
+          <img class="pm_img" src="img/todo-list.png">
           <p class="lang_text">使用言語: HTML / CSS / javascript</p>
           <a class="pm_btn" href="introduction/introduction.html#todo_introduction">作品詳細</a>
           <a class="pm_btn" href="https:///taikitominari.github.io/todoapp">デモページ</a>
