--- a/introduction/introduction.html
+++ b/introduction/introduction.html
@@ -12,21 +12,8 @@
 <body>
   <header>
     <nav>
-      <ul class="menu_list">
-        <i class="fas fa-times" id="haid_btn"></i>
-        <li><a class="menu_item" href="../index.html#introduction">自己紹介</a></li>
-        <li><a class="menu_item" href="../index.html#pg_myself">スキルセット</a></li>
-        <li><a class="menu_item" href="../index.html#introduction">作品紹介</a></li>
-        <li><a class="menu_item" href="../index.html#effort">現在取り組み</a></li>
-        <li><a class="menu_item" href="#bono_introduction">BONO hair</a></li>
-      </ul>
-
-      <i class="fas fa-bars" id="open_btn"></i>
       <ul class="header_list">
-        <li><a href="../index.html#introduction">自己紹介</a></li>
-        <li><a href="../index.html#pg_myself">スキルセット</a></li>
-        <li><a href="../index.html#performance">作品紹介</a></li>
-        <li><a href="../index.html#effort">現在取り組み</a></li>
+        <li><a href="../index.html">トップページ</a></li>
         <li><a href="#bono_introduction">BONO hair</a></li>
       </ul>
     </nav>
@@ -104,8 +91,6 @@
 
       </section>
     </div>
-
   </main>
-<script src="../js/main.js"></script>
 </body>
 </html>
