作品紹介にクイズゲームを追加, 位置の調整

--- a/index.html
+++ b/index.html
@@ -96,12 +96,18 @@
           <a class="pm_btn" href="https://github.com/taikitominari/bono-hair">Git Hub</a>
         </div>
         <div class="pm_item">
-          <div class="pm_item_title">todoリスト</div>
+          <div class="pm_item_title">TODOリスト</div>
           <img class="pm_img" src="img/todo-list.png">
           <p class="lang_text">使用言語: HTML / CSS / javascript</p>
-          <a class="pm_btn" href="introduction/introduction.html#todo_introduction">作品詳細</a>
           <a class="pm_btn" href="https:///taikitominari.github.io/todoapp">デモページ</a>
           <a class="pm_btn" href="https://github.com/taikitominari/todoapp">Git Hub</a>
+        </div>
+        <div class="pm_item">
+          <div class="pm_item_title">クイズゲーム</div>
+          <img class="pm_img" src="img/quiz-game.png">
+          <p class="lang_text">使用言語: HTML / CSS / javascript</p>
+          <a class="pm_btn" href="https://taikitominari.github.io/quiz-game">デモページ</a>
+          <a class="pm_btn" href="https://github.com/taikitominari/quiz-game">Git Hub</a>
         </div>
       </div>
     </section>
