マイアドレス帳の項目を追加

--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
         <div class="pm_item">
           <div class="pm_item_title">BONO hairホームページ</div>
           <img class="pm_img" src="img/bono hair.png">
-          <p class="lang_text">使用言語: HTML / CSS / javascript / (jQuery)</p>
+          <p class="lang_text">使用言語: HTML / CSS / javascript / jQuery</p>
           <a class="pm_btn" href="introduction/introduction.html#bono_introduction">作品詳細</a>
           <a class="pm_btn" href="http://bonohair95.com">デモページ</a>
           <a class="pm_btn" href="https://github.com/taikitominari/bono-hair">Git Hub</a>
         </div>
         <div class="pm_item">
-          <div class="pm_item_title">TODOリスト</div>
-          <img class="pm_img" src="img/todo-list.png">
-          <p class="lang_text">使用言語: HTML / CSS / javascript</p>
-          <a class="pm_btn" href="https:///taikitominari.github.io/todoapp">デモページ</a>
-          <a class="pm_btn" href="https://github.com/taikitominari/todoapp">Git Hub</a>
+          <div class="pm_item_title">マイアドレス帳</div>
+          <img class="pm_img" src="img/my-address.png">
+          <p class="lang_text">使用言語: HTML / Vue.js</p>
+          <a class="pm_btn" href="https://my-address-pj-3a951.web.app">デモページ</a>
+          <a class="pm_btn" href="https://github.com/taikitominari/vue.js-study.git">Git Hub</a>
         </div>
         <div class="pm_item">
           <div class="pm_item_title">クイズゲーム</div>
@@ -109,6 +109,13 @@
           <a class="pm_btn" href="https://taikitominari.github.io/quiz-game">デモページ</a>
           <a class="pm_btn" href="https://github.com/taikitominari/quiz-game">Git Hub</a>
         </div>
+        <div class="pm_item">
+          <div class="pm_item_title">TODOリスト</div>
+          <img class="pm_img" src="img/todo-list.png">
+          <p class="lang_text">使用言語: HTML / CSS / javascript</p>
+          <a class="pm_btn" href="https:///taikitominari.github.io/todoapp">デモページ</a>
+          <a class="pm_btn" href="https://github.com/taikitominari/todoapp">Git Hub</a>
+        </div>
       </div>
     </section>
 
@@ -116,9 +123,9 @@
       <div class="ef_content_wrap">
         <h1 class="title_name">現在の取り組み</h1>
         <div class="effort_item">
-          <h2 class="item_title">Webアプリケーション開発(Vue.jsの学習)</h2>
-          <p class="item_text">私の友人が開発したSwiftとFierbaseを使用したスマホSNSアプリのWeb版の開発を目標としています。現在漠然と考えているのは,Vue.jsを使い作成したいと思っています。そのため現在Vue.jsを主に動画教材でインプットして、それを少しアレンジしたり実際に自分で書くなどしてアウトプットしています。</p>
-          <a class="pm_btn" href="https://github.com/taikitominari/vue.js-study.git">Vue.jsアウトプット</a>
+          <h2 class="item_title">Webアプリケーション開発</h2>
+          <p class="item_text">現在の個人的な目標ですが、私の友人が開発したSwiftとFierbaseを使用したスマホSNSアプリのWeb版の開発したいと思っています。一人で作るには技術、知識が全然足りないので、FirebaseやJavaScriptなどをインプットし、アウトプットするを繰り返して徐々に目標に向かっています。</p>
+          <a class="pm_btn" href="https://github.com/taikitominari">Git Hub</a>
         </div>
       </div>
     </section>
