内容一部訂正

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </dl>
           <dl>
             <dt>経歴</dt>
-            <dd>高校を卒業後,航空機部品を取り扱う会社に就職、そこで検査員として４年間務める。働きながらプログラミングを独学で勉強し転職活動を開始</dd>
+            <dd>高校を卒業後,航空機部品を取り扱う会社に就職、そこで検査員として業務を行なっています。働きながらプログラミングを独学で勉強し転職活動を開始</dd>
           </dl>
           <dl>
             <dt>趣味</dt>
