--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <header>
     <nav>
+      <div id="shadow"></div>
       <ul class="menu_list">
-        <i class="fas fa-times" id="haid_btn"></i>
         <li><a class="menu_item" href="#introduction">自分紹介</a></li>
         <li><a class="menu_item" href="#pg_myself">スキルセット</a></li>
         <li><a class="menu_item" href="#performance">作品一覧</a></li>
