データベースを書くところを追加

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="pm_item">
           <div class="pm_item_title">マイアドレス帳</div>
           <img class="pm_img" src="img/my-address.png">
-          <p class="lang_text">使用言語: Vue.js</p>
+          <p class="lang_text">使用言語: Vue.js </p>
+          <p class="lang_text">データベース: Firebase</p>
           <a class="pm_btn" href="https://my-address-pj-3a951.web.app">デモページ</a>
           <a class="pm_btn" href="https://github.com/taikitominari/vue.js-study.git">Git Hub</a>
         </div>
