topのレイアウト変更 hover時に動きをつける

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/portfolio.css">
+  <link href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" rel="stylesheet">
   <title>Portfolio</title>
 </head>
 <body>
   <section class="top">
     <div class="top_wrap">
-      <div class="top_left">
-        <a href="#" class="top_btn profile_btn"><span>プロフィール</span></a>
-      </div>
-      <div class="top_right">
-        <a href="#" class="top_btn work_btn"><span>制作物</span></a>
-      </div>
+      <a class="top_left">
+        <p class="profile"><i class="fa-solid fa-book"></i>プロフィール</p>
+      </a>
+      <a class="top_right">
+        <p class="work"><i class="fa-solid fa-hammer"></i>制作物</p>
+      </a>
     </div>
     <div class="main_logo">
       <h1>Portfolio</h1>
@@ -24,6 +25,9 @@
       <p>TAIKI</p>
       <p>TOMINARI</p>
     </div>
+  </section>
+  <section class="profile_wrap">
+    <p>aaa</p>
   </section>
   <script src="js/portfolio.js"></script>
 </body>
