--- a/portfolio.html
+++ b/portfolio.html
@@ -6,16 +6,17 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/portfolio.css">
   <link href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Portfolio</title>
 </head>
 <body>
-  <section class="top">
+  <section class="top_content">
     <div class="top_wrap">
-      <a class="top_left">
-        <p class="profile"><i class="fa-solid fa-book"></i>プロフィール</p>
+      <a href="#profile" class="top_left">
+        <p class="top_left_text"><i class="fa-solid fa-book"></i>プロフィール</p>
       </a>
-      <a class="top_right">
-        <p class="work"><i class="fa-solid fa-hammer"></i>制作物</p>
+      <a href="#work" class="top_right">
+        <p class="top_right_text"><i class="fa-solid fa-hammer"></i>制作物</p>
       </a>
     </div>
     <div class="main_logo">
@@ -26,8 +27,15 @@
       <p>TOMINARI</p>
     </div>
   </section>
-  <section class="profile_wrap">
-    <p>aaa</p>
+  <section id="profile">
+    <p class="profile_logo"><i class="fa-solid fa-book"></i>プロフィール</p>
+    <div class="profile_item_wrap">
+      
+    </div>
+  </section>
+  <section id="work">
+    <p class="work_logo"><i class="fa-solid fa-hammer"></i>制作物</p>
+
   </section>
   <script src="js/portfolio.js"></script>
 </body>
