--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,27 @@
   <section id="profile">
     <p class="profile_logo"><i class="fa-solid fa-book"></i>プロフィール</p>
     <div class="profile_item_wrap">
-      
+      <div class="profile_item">
+        <div class="profile_text">
+          <p class="text_title"><i class="fa-solid fa-pencil"></i>名前</p>
+          <p>富成 泰暉</p>
+          <p>トミナリ タイキ</p>
+        </div>
+      </div>
+      <div class="profile_item">
+        <div class="profile_text">
+          <p class="text_title"><i class="fa-solid fa-image-portrait"></i>年齢</p>
+          <p>1997年11月23日</p>
+          <p>２４歳</p>
+        </div>
+      </div>
+      <div class="profile_item">
+        <div class="profile_text">
+          <p class="text_title"><i class="fa-solid fa-heart"></i>趣味</p>
+          <p>バスケットボール</p>
+          <p>ゲーム ...etc</p>
+        </div>
+      </div>
     </div>
   </section>
   <section id="work">
