main_logoのフェードイン実装 profileのフェードイン変更

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
         <p class="top_right_text"><i class="fa-solid fa-hammer"></i>制作物</p>
       </a>
     </div>
-    <div class="main_logo">
-      <h1>Portfolio</h1>
+    <div class="top_title">
+      <p class="main_logo">Portfolio</p>
     </div>
     <div class="name">
       <p>TAIKI</p>
@@ -28,7 +28,10 @@
     </div>
   </section>
   <section id="profile">
-    <p class="profile_logo"><i class="fa-solid fa-book"></i>プロフィール</p>
+    <div class="profile_logo">
+      <i class="fa-solid fa-book"></i>
+      <p class="logo">プロフィール</p>
+    </div>
     <div class="profile_item_wrap">
       <div class="profile_item">
         <div class="profile_text">
@@ -53,6 +56,7 @@
       </div>
     </div>
   </section>
+
   <section id="work">
     <p class="work_logo"><i class="fa-solid fa-hammer"></i>制作物</p>
 
