top_content内のフェードイン調整

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
       <p class="main_logo">Portfolio</p>
     </div>
     <div class="name">
-      <p>TAIKI</p>
-      <p>TOMINARI</p>
+      <p class="taiki">TAIKI</p>
+      <p class="tominari">TOMINARI</p>
     </div>
   </section>
   <section id="profile">
