back_img追加 profile_space,work_space追加 フェードイン実装

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,12 +10,13 @@
   <title>Portfolio</title>
 </head>
 <body>
+  <div class="back_img"></div>
   <section class="top_content">
     <div class="top_wrap">
-      <a href="#profile" class="top_left">
+      <a href="#profile_space" class="top_left">
         <p class="top_left_text"><i class="fa-solid fa-book"></i>プロフィール</p>
       </a>
-      <a href="#work" class="top_right">
+      <a href="#work_space" class="top_right">
         <p class="top_right_text"><i class="fa-solid fa-hammer"></i>制作物</p>
       </a>
     </div>
@@ -27,7 +28,17 @@
       <p class="tominari">TOMINARI</p>
     </div>
   </section>
+
+  <div class="space" id="profile_space">
+    <i  class="fa-solid fa-question"></i>
+    <i class="fa-solid fa-user-tie"></i>
+  </div>
+
   <section id="profile">
+    <div class="backgroud_wrap">
+      <div class="profile_left"></div>
+      <div class="profile_right"></div>
+    </div>
     <div class="profile_logo">
       <i class="fa-solid fa-book"></i>
       <p class="logo">プロフィール</p>
@@ -56,6 +67,11 @@
       </div>
     </div>
   </section>
+
+  <div class="space" id="work_space">
+    <i class="fa-solid fa-file"></i>
+    <i class="fa-solid fa-laptop-code"></i>
+  </div>
 
   <section id="work">
     <p class="work_logo"><i class="fa-solid fa-hammer"></i>制作物</p>
