p_logo,w_logoのフェードイン取り消し 各sectionに背景画像を挿入

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,19 +29,22 @@
     </div>
   </section>
 
-  <div class="space" id="profile_space">
-    <i  class="fa-solid fa-question"></i>
-    <i class="fa-solid fa-user-tie"></i>
+  <div id="profile_space">
+    <div class="profile_background"></div>
+    <div class="profile_logo">
+      <i class="fa-solid fa-book"></i>
+      <p class="p_logo">プロフィール</p>
+    </div>
+    <div class="space">
+      <i class="fa-solid fa-user-tie"></i>
+      <i class="fa-solid fa-comment-dots"></i>
+    </div>
   </div>
 
   <section id="profile">
-    <div class="backgroud_wrap">
+    <div class="profile_backgroud">
       <div class="profile_left"></div>
       <div class="profile_right"></div>
-    </div>
-    <div class="profile_logo">
-      <i class="fa-solid fa-book"></i>
-      <p class="logo">プロフィール</p>
     </div>
     <div class="profile_item_wrap">
       <div class="profile_item">
@@ -68,13 +71,22 @@
     </div>
   </section>
 
-  <div class="space" id="work_space">
-    <i class="fa-solid fa-file"></i>
-    <i class="fa-solid fa-laptop-code"></i>
+  <div id="work_space">
+    <div class="profile_logo">
+      <i class="fa-solid fa-hammer"></i>
+      <p class="w_logo">制作物</p>
+    </div>
+    <div class="space">
+      <i class="fa-solid fa-file"></i>
+      <i class="fa-solid fa-laptop-code"></i>
+    </div>
   </div>
 
   <section id="work">
-    <p class="work_logo"><i class="fa-solid fa-hammer"></i>制作物</p>
+    <div class="work_background">
+      <div class="work_left"></div>
+      <div class="work_right"></div>
+    </div>
 
   </section>
   <script src="js/portfolio.js"></script>
