制作物(BONO hair)の実装 学習の実装

--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
   <title>Portfolio</title>
 </head>
 <body>
-  <div class="back_img"></div>
   <section class="top_content">
+    <div class="back_img"></div>
     <div class="top_wrap">
       <a href="#profile_space" class="top_left">
         <p class="top_left_text"><i class="fa-solid fa-book"></i>プロフィール</p>
@@ -31,7 +31,7 @@
 
   <div id="profile_space">
     <div class="profile_background"></div>
-    <div class="profile_logo">
+    <div class="section_logo">
       <i class="fa-solid fa-book"></i>
       <p class="p_logo">プロフィール</p>
     </div>
@@ -72,7 +72,7 @@
   </section>
 
   <div id="work_space">
-    <div class="profile_logo">
+    <div class="section_logo">
       <i class="fa-solid fa-hammer"></i>
       <p class="w_logo">制作物</p>
     </div>
@@ -87,7 +87,32 @@
       <div class="work_left"></div>
       <div class="work_right"></div>
     </div>
-
+    <div class="work_content">
+      <div class="create_wrap">
+        <div class="bono_img">
+          <div class="bono_cover">
+            <div class="cover_item">
+              <p class="cover_title">BONO hair HP</p>
+              <p class="cover_code"><i class="fa-solid fa-code"></i>HTML , CSS , JavaScriptm (jQuery)</p>
+              <p class="cover_text">地元の理容店のHP作成をデザインからコーディングまで1から手掛けました</p>
+              <div class="btn_wrap">
+                <a class="cover_btn" href="https://bonohair95.com/">BONO hair</a>
+                <a class="git_btn" href="https://github.com/taikitominari/bono-hair">Git Hub</a>
+              </div>
+            </div>
+          </div>
+          <img class="bono" src="img/BONO hair.png">
+        </div>
+      </div>
+      <div class="study_wrap">
+        <div class="study_title">学習</div>
+        <div class="study_item">
+          <img class="address" src="img/my-address.png"> 
+          <img class="quiz" src="img/quiz-game.png"> 
+          <img class="todo" src="img/todo-list.png"> 
+        </div>
+      </div>
+    </div>
   </section>
   <script src="js/portfolio.js"></script>
 </body>
