ページ全体のレスポンシブ対応

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/portfolio.css">
+  <link rel="stylesheet" href="css/media.css">
   <link href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <title>Portfolio</title>
@@ -89,12 +90,12 @@
     </div>
       <div class="work_content">
         <div class="create_wrap">
+          <p class="create_title">BONO hair HP</p>
+          <p class="create_text">地元の理容店のHP作成をデザインからコーディングまで1から手掛けました</p>
           <div class="bono_img">
             <div class="bono_cover">
               <div class="cover_item">
-                <p class="cover_title">BONO hair HP</p>
                 <p class="cover_code"><i class="fa-solid fa-code"></i>HTML , CSS , JavaScriptm (jQuery)</p>
-                <p class="cover_text">地元の理容店のHP作成をデザインからコーディングまで1から手掛けました</p>
                 <div class="btn_wrap">
                   <a class="cover_btn" href="https://bonohair95.com/">BONO hair</a>
                   <a class="git_btn" href="https://github.com/taikitominari/bono-hair">Git Hub</a>
