学習のでもページリンクを作成

--- a/index.html
+++ b/index.html
@@ -107,9 +107,14 @@
         <div class="study_wrap">
           <div class="study_title">学習</div>
           <div class="study_item">
-            <img class="address" src="img/my-address.png"> 
-            <img class="quiz" src="img/quiz-game.png"> 
-            <img class="todo" src="img/todo-list.png"> 
+            <div class="quiz_item">
+              <img class="quiz" src="img/quiz-game.png"> 
+              <a class="demo_btn" href="https://taikitominari.github.io/quiz-game/">デモページ</a>
+            </div>
+            <div class="todo_item">
+              <img class="todo" src="img/todo-list.png"> 
+              <a  class="demo_btn" href="https://taikitominari.github.io/todoapp/">デモページ</a>
+            </div>
           </div>
         </div>
       </div>
